refec: support ollama