@@ -22,6 +22,9 @@ import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalTime;
 import java.util.Collection;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
@@ -78,22 +81,22 @@ public abstract class AiServicesWithNewToolsIT {
     @Test
     protected void should_execute_tool_with_primitive_parameters() {
 
-        for (var model : models()) {
+        for (ChatLanguageModel model : models()) {
 
             // given
             model = spy(model);
 
-            var tool = spy(new ToolWithPrimitiveParameters());
+            ToolWithPrimitiveParameters tool = spy(new ToolWithPrimitiveParameters());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tool)
                     .build();
 
-            var text = "How much is 37 plus 87?";
+            String text = "How much is 37 plus 87?";
 
             // when
-            var response = assistant.chat(text);
+            Response<AiMessage> response = assistant.chat(text);
 
             // then
             assertThat(response.content().text()).contains("124");
@@ -106,9 +109,9 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
-                var toolSpecification = toolSpecifications.get(0);
+                ToolSpecification toolSpecification = toolSpecifications.get(0);
                 assertThat(toolSpecification.name()).isEqualTo("add");
                 assertThat(toolSpecification.description()).isNull();
                 assertThat(toolSpecification.parameters()).isEqualTo(ToolWithPrimitiveParameters.EXPECTED_SCHEMA);
@@ -118,12 +121,19 @@ public abstract class AiServicesWithNewToolsIT {
 
     static class ToolWithPojoParameter {
 
-        record Person(
+        static class Person {
 
-                String name,
-                int age,
-                Double height,
-                boolean married) {
+            String name;
+            int age;
+            Double height;
+            boolean married;
+
+            public Person(String name, int age, Double height, boolean married) {
+                this.name = name;
+                this.age = age;
+                this.height = height;
+                this.married = married;
+            }
         }
 
         @Tool
@@ -144,19 +154,20 @@ public abstract class AiServicesWithNewToolsIT {
 
     @Test
     protected void should_execute_tool_with_pojo_with_primitives() {
-        for (var model : models()) {
+
+        for (ChatLanguageModel model : models()) {
 
             // given
             model = spy(model);
 
-            var tool = spy(new ToolWithPojoParameter());
+            ToolWithPojoParameter tool = spy(new ToolWithPojoParameter());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tool)
                     .build();
 
-            var text = "Use 'process' tool to process the following: Klaus is 37 years old, 1.78m height and single";
+            String text = "Use 'process' tool to process the following: Klaus is 37 years old, 1.78m height and single";
 
             // when
             assistant.chat(text);
@@ -170,9 +181,9 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
-                var toolSpecification = toolSpecifications.get(0);
+                ToolSpecification toolSpecification = toolSpecifications.get(0);
                 assertThat(toolSpecification.name()).isEqualTo("process");
                 assertThat(toolSpecification.description()).isNull();
                 assertThat(toolSpecification.parameters()).isEqualTo(ToolWithPojoParameter.EXPECTED_SCHEMA);
@@ -182,13 +193,24 @@ public abstract class AiServicesWithNewToolsIT {
 
     static class ToolWithNestedPojoParameter {
 
-        record Person(
-                String name,
-                Address address
-        ) {
+        static class Person {
+
+            String name;
+            Address address;
+
+            public Person(String name, Address address) {
+                this.name = name;
+                this.address = address;
+            }
         }
 
-        record Address(String city) {
+        static class Address {
+
+            String city;
+
+            public Address(String city) {
+                this.city = city;
+            }
         }
 
         @Tool
@@ -211,19 +233,19 @@ public abstract class AiServicesWithNewToolsIT {
     @Test
     protected void should_execute_tool_with_pojo_with_nested_pojo() {
 
-        for (var model : models()) {
+        for (ChatLanguageModel model : models()) {
 
             // given
             model = spy(model);
 
-            var tool = spy(new ToolWithNestedPojoParameter());
+            ToolWithNestedPojoParameter tool = spy(new ToolWithNestedPojoParameter());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tool)
                     .build();
 
-            var text = "Use 'process' tool to process the following: Klaus lives in Langley Falls";
+            String text = "Use 'process' tool to process the following: Klaus lives in Langley Falls";
 
             // when
             assistant.chat(text);
@@ -237,9 +259,9 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
-                var toolSpecification = toolSpecifications.get(0);
+                ToolSpecification toolSpecification = toolSpecifications.get(0);
                 assertThat(toolSpecification.name()).isEqualTo("process");
                 assertThat(toolSpecification.description()).isNull();
                 assertThat(toolSpecification.parameters()).isEqualTo(ToolWithNestedPojoParameter.EXPECTED_SCHEMA);
@@ -249,10 +271,15 @@ public abstract class AiServicesWithNewToolsIT {
 
     static class ToolWithRecursion {
 
-        record Person(
-                String name,
-                List<Person> children
-        ) {
+        static class Person {
+
+            String name;
+            List<Person> children;
+
+            public Person(String name, List<Person> children) {
+                this.name = name;
+                this.children = children;
+            }
         }
 
         @Tool
@@ -262,7 +289,7 @@ public abstract class AiServicesWithNewToolsIT {
         static final String REFERENCE = generateUUIDFrom(ToolWithRecursion.Person.class.getName());
 
         static final JsonObjectSchema PERSON_SCHEMA = JsonObjectSchema.builder()
-                .properties(new LinkedHashMap<>() {{
+                .properties(new LinkedHashMap<String, JsonSchemaElement>() {{
                     put("name", new JsonStringSchema());
                     put("children", JsonArraySchema.builder()
                             .items(JsonReferenceSchema.builder()
@@ -284,19 +311,19 @@ public abstract class AiServicesWithNewToolsIT {
     @EnabledIf("supportsRecursion")
     protected void should_execute_tool_with_pojo_with_recursion() {
 
-        for (var model : models()) {
+        for (ChatLanguageModel model : models()) {
 
             // given
             model = spy(model);
 
-            var tool = spy(new ToolWithRecursion());
+            ToolWithRecursion tool = spy(new ToolWithRecursion());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tool)
                     .build();
 
-            var text = "Use 'process' tool to process the following: Francine has 2 children: Steve and Hayley";
+            String text = "Use 'process' tool to process the following: Francine has 2 children: Steve and Hayley";
 
             // when
             assistant.chat(text);
@@ -318,9 +345,9 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
-                var toolSpecification = toolSpecifications.get(0);
+                ToolSpecification toolSpecification = toolSpecifications.get(0);
                 assertThat(toolSpecification.name()).isEqualTo("process");
                 assertThat(toolSpecification.description()).isNull();
                 assertThat(toolSpecification.parameters()).isEqualTo(ToolWithRecursion.EXPECTED_SCHEMA);
@@ -343,22 +370,22 @@ public abstract class AiServicesWithNewToolsIT {
     @Test
     protected void should_execute_tool_without_parameters() {
 
-        for (var model : models()) {
+        for (ChatLanguageModel model : models()) {
 
             // given
             model = spy(model);
 
-            var tools = spy(new ToolWithoutParameters());
+            ToolWithoutParameters tools = spy(new ToolWithoutParameters());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tools)
                     .build();
 
-            var text = "What is the time now? Respond in HH:MM:SS format.";
+            String text = "What is the time now? Respond in HH:MM:SS format.";
 
             // when
-            var response = assistant.chat(text);
+            Response<AiMessage> response = assistant.chat(text);
 
             // then
             assertThat(response.content().text()).contains("17:11:45");
@@ -371,9 +398,9 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
-                var toolSpecification = toolSpecifications.get(0);
+                ToolSpecification toolSpecification = toolSpecifications.get(0);
                 assertThat(toolSpecification.name()).isEqualTo("currentTime");
                 assertThat(toolSpecification.description()).isNull();
                 assertThat(toolSpecification.parameters()).isNull();
@@ -408,22 +435,22 @@ public abstract class AiServicesWithNewToolsIT {
     @Test
     protected void should_execute_tool_with_enum_parameter() {
 
-        for (var model : models()) {
+        for (ChatLanguageModel model : models()) {
 
             // given
             model = spy(model);
 
-            var tool = spy(new ToolWithEnumParameter());
+            ToolWithEnumParameter tool = spy(new ToolWithEnumParameter());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tool)
                     .build();
 
-            var text = "What is the temperature in Munich in celsius?";
+            String text = "What is the weather in Munich in celsius?";
 
             // when
-            var response = assistant.chat(text);
+            Response<AiMessage> response = assistant.chat(text);
 
             // then
             assertThat(response.content().text()).contains("19");
@@ -436,7 +463,7 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
                 assertThat(toolSpecifications.get(0)).isEqualTo(ToolWithEnumParameter.EXPECTED_SPECIFICATION);
             }
@@ -464,28 +491,28 @@ public abstract class AiServicesWithNewToolsIT {
     @EnabledIf("supportsMapParameters")
     protected void should_execute_tool_with_map_parameter() {
 
-        for (var model : modelsSupportingMapParametersInTools()) {
+        for (ChatLanguageModel model : modelsSupportingMapParametersInTools()) {
 
             // given
             model = spy(model);
 
-            var tool = spy(new ToolWithMapParameter());
+            ToolWithMapParameter tool = spy(new ToolWithMapParameter());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tool)
                     .build();
 
-            var text = "Process the following: Klaus is 42 years old and Francine is 47 years old";
+            String text = "Process the following: Klaus is 42 years old and Francine is 47 years old";
 
             // when
             assistant.chat(text);
 
             // then
-            verify(tool).process(Map.of(
-                    "Klaus", 42,
-                    "Francine", 47
-            ));
+            verify(tool).process(Collections.unmodifiableMap(new HashMap<String, Integer>() {{
+                put("Klaus", 42);
+                put("Francine", 47);
+            }}));
             verifyNoMoreInteractions(tool);
 
             if (verifyModelInteractions()) {
@@ -493,7 +520,7 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
                 assertThat(toolSpecifications.get(0)).isEqualTo(ToolWithMapParameter.EXPECTED_SPECIFICATION);
             }
@@ -524,19 +551,19 @@ public abstract class AiServicesWithNewToolsIT {
     @Test
     protected void should_execute_tool_with_list_of_strings_parameter() {
 
-        for (var model : models()) {
+        for (ChatLanguageModel model : models()) {
 
             // given
             model = spy(model);
 
-            var tool = spy(new ToolWithListOfStringsParameter());
+            ToolWithListOfStringsParameter tool = spy(new ToolWithListOfStringsParameter());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tool)
                     .build();
 
-            var text = "Process the following names: Klaus and Franny";
+            String text = "Process the following names: Klaus and Franny";
 
             // when
             assistant.chat(text);
@@ -550,7 +577,7 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
                 assertThat(toolSpecifications.get(0)).isEqualTo(ToolWithListOfStringsParameter.EXPECTED_SPECIFICATION);
             }
@@ -584,25 +611,25 @@ public abstract class AiServicesWithNewToolsIT {
     @Test
     protected void should_execute_tool_with_set_of_enums_parameter() {
 
-        for (var model : models()) {
+        for (ChatLanguageModel model : models()) {
 
             // given
             model = spy(model);
 
-            var tool = spy(new ToolWithSetOfEnumsParameter());
+            ToolWithSetOfEnumsParameter tool = spy(new ToolWithSetOfEnumsParameter());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tool)
                     .build();
 
-            var text = "Process the following colors: RED and GREEN";
+            String text = "Process the following colors: RED and GREEN";
 
             // when
             assistant.chat(text);
 
             // then
-            verify(tool).process(Set.of(RED, GREEN));
+            verify(tool).process(Collections.unmodifiableSet(new HashSet<>(asList(RED, GREEN))));
             verifyNoMoreInteractions(tool);
 
             if (verifyModelInteractions()) {
@@ -610,7 +637,7 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
                 assertThat(toolSpecifications.get(0)).isEqualTo(ToolWithSetOfEnumsParameter.EXPECTED_SPECIFICATION);
             }
@@ -637,25 +664,25 @@ public abstract class AiServicesWithNewToolsIT {
     @Test
     protected void should_execute_tool_with_collection_of_integers_parameter() {
 
-        for (var model : models()) {
+        for (ChatLanguageModel model : models()) {
 
             // given
             model = spy(model);
 
-            var tool = spy(new ToolWithCollectionOfIntegersParameter());
+            ToolWithCollectionOfIntegersParameter tool = spy(new ToolWithCollectionOfIntegersParameter());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tool)
                     .build();
 
-            var text = "Process the following integers: 37, 73";
+            String text = "Process the following integers: 37, 73";
 
             // when
             assistant.chat(text);
 
             // then
-            verify(tool).processNumbers(List.of(37, 73));
+            verify(tool).processNumbers(Collections.unmodifiableList(asList(37, 73)));
             verifyNoMoreInteractions(tool);
 
             if (verifyModelInteractions()) {
@@ -663,7 +690,7 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
                 assertThat(toolSpecifications.get(0)).isEqualTo(ToolWithCollectionOfIntegersParameter.EXPECTED_SPECIFICATION);
             }
@@ -672,7 +699,13 @@ public abstract class AiServicesWithNewToolsIT {
 
     static class ToolWithListOfPojoParameter {
 
-        record Person(String name) {
+        static class Person {
+
+            String name;
+
+            public Person(String name) {
+                this.name = name;
+            }
         }
 
         @Tool
@@ -697,32 +730,33 @@ public abstract class AiServicesWithNewToolsIT {
     @Test
     protected void should_execute_tool_with_list_of_POJOs_parameter() {
 
-        for (var model : models()) {
+        for (ChatLanguageModel model : models()) {
 
             // given
             model = spy(model);
 
-            var tool = spy(new ToolWithListOfPojoParameter());
+            ToolWithListOfPojoParameter tool = spy(new ToolWithListOfPojoParameter());
 
-            var assistant = AiServices.builder(Assistant.class)
+            Assistant assistant = AiServices.builder(Assistant.class)
                     .chatLanguageModel(model)
                     .tools(tool)
                     .build();
 
-            var text = "Process the following people: Klaus and Franny";
+            String text = "Process the following people: Klaus and Franny";
 
             // when
             assistant.chat(text);
 
             // then
             try {
-                verify(tool).process(List.of(
+                verify(tool).process(Collections.unmodifiableList(asList(
                         new ToolWithListOfPojoParameter.Person("Klaus"),
                         new ToolWithListOfPojoParameter.Person("Franny")
-                ));
+                )));
             } catch (Throwable t) {
-                verify(tool).process(List.of(new ToolWithListOfPojoParameter.Person("Klaus")));
-                verify(tool).process(List.of(new ToolWithListOfPojoParameter.Person("Franny")));
+
+                verify(tool).process(Collections.singletonList(new ToolWithListOfPojoParameter.Person("Klaus")));
+                verify(tool).process(Collections.singletonList(new ToolWithListOfPojoParameter.Person("Franny")));
             }
             verifyNoMoreInteractions(tool);
 
@@ -731,7 +765,7 @@ public abstract class AiServicesWithNewToolsIT {
                 verify(model, times(2)).generate(anyList(), toolSpecificationCaptor.capture());
                 verifyNoMoreInteractions(model);
 
-                var toolSpecifications = toolSpecificationCaptor.getValue();
+                List<ToolSpecification> toolSpecifications = toolSpecificationCaptor.getValue();
                 assertThat(toolSpecifications).hasSize(1);
                 assertThat(toolSpecifications.get(0)).isEqualTo(ToolWithListOfPojoParameter.EXPECTED_SPECIFICATION);
             }
